--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
       </div>
       <div class="hdr-right">En</div>
     </header>
+   <div class="wrapper">
     <div class="container">
       <h2>Hello</h2>
-      <h1>I'm <span>James</span>kamerun</h1>
+      <h1>I'm <span>James</span> kamerun</h1>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam fugiat
         sequi <br> consequuntur omnis porro labore a eveniet quis et? Veniam fugiat
@@ -31,5 +32,7 @@
       </p>
       <button>Download Cv</button>
     </div>
+    <div class="img"><img src="./Image/Budgeting_Report_Presentation-removebg-preview.png" alt=""></div>
+   </div>
   </body>
 </html>
