--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+   
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -20,19 +28,33 @@
       </div>
       <div class="hdr-right">En</div>
     </header>
-   <div class="wrapper">
-    <div class="container">
-      <h2>Hello</h2>
-      <h1>I'm <span>James</span> kamerun</h1>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam fugiat
-        sequi <br> consequuntur omnis porro labore a eveniet quis et? Veniam fugiat
-        libero, minima, <br> tempore earum impedit nulla exercitationem ratione
-        eveniet, amet consequatur <br> animi labore maxime?
-      </p>
-      <button>Download Cv</button>
+    <div class="wrapper">
+      <div class="container">
+        <h2>Hello</h2>
+        <h1>I'm <span>James</span> kamerun</h1>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam fugiat
+          sequi <br />
+          consequuntur omnis porro labore a eveniet quis et? Veniam fugiat
+          libero, minima, <br />
+          tempore earum impedit nulla exercitationem ratione eveniet, amet
+          consequatur <br />
+          animi labore maxime?
+        </p>
+        <div class="social">
+          <i class="fa-brands fa-facebook"></i>
+          <i class="fa-brands fa-twitter"></i>
+          <i class="fa-brands fa-youtube"></i>
+        </div>
+        <button>Download Cv</button>
+      </div>
+      
+      <div class="img">
+        <img
+          src="./Image/Budgeting_Report_Presentation-removebg-preview.png"
+          alt=""
+        />
+      </div>
     </div>
-    <div class="img"><img src="./Image/Budgeting_Report_Presentation-removebg-preview.png" alt=""></div>
-   </div>
   </body>
 </html>
